[project]
name = 'Agent-Behavior-Model'
version = '23.1.25'

description = 'Agent Behavior Model'
readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}

requires-python = '>= 3.11'

license = {text = 'MIT'}

authors = [
  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'}
]
maintainers = [
  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'Vinh@STEAMforVietnam.org'},
  {name = 'STEAM for Vietnam Foundation: Robotics & AI Educational Initative', email = 'Edu.Robotics@STEAMforVietnam.org'}
]

keywords = [
  'agent',
  'behavior', 'behaviour',
  'model', 'modeling', 'modelling',
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Framework :: Robot Framework',
  'Framework :: Robot Framework :: Library',
  'Framework :: Robot Framework :: Tool',
  'Intended Audience :: Education',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Education',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
  'CLICK >= 8.1.3',

  'Decorator >= 5.1.1',
  'Wrapt >= 1.14.1',

  'EdX-CodeJail >= 3.3.1',
]


[project.urls]
Homepage = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
Documentation = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
GitHub = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'
Repository = 'https://GitHub.com/IoT-Robotics/Agent-Behavior-Model'


[project.scripts]
abm = 'abm.cli:abm_cli'


[project.optional-dependencies]
devtest = [
  'Nose2 >= 0.12.0',
  'PyTest >= 7.2.1',
]

publish = [
  'Build >= 0.10.0',
  'Twine >= 4.0.2',
]


[build-system]
requires = [
  'SetUpTools >= 66.1.1',
  'Wheel >= 0.38.4',
]
build-backend = 'setuptools.build_meta'
